# VoxelOptix

./: .gitattributes  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  pch.h  vcpkg.json
src/: App.cpp  App.hpp  Exceptions.hpp  Frame.cpp  Frame.hpp  LaunchParams.hpp  Programs.cu  Renderer.cpp  Renderer.hpp  Utils.hpp  Window.cpp  kernel.cu  main.cpp
src/display/: Frame.cpp  Frame.hpp  Menu.cpp  Menu.h  Menu.hpp  TextRenderer.cpp  TextRenderer.hpp  Window.cpp  Window.hpp
src/misc/: Exceptions.hpp  Noise.hpp  Random.hpp
src/render/: Camera.cpp  Camera.hpp  CameraController.cpp  CameraController.hpp  LaunchParams.hpp  Programs.cu  Renderer.cpp  Renderer.hpp
src/world/: Chunk.cpp  Chunk.hpp  World.cpp  World.hpp
